--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -33,7 +33,7 @@
 
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
-\title{Алгебра}
+\title{Алгебра. Билеты 1 сем.}
 \author{Кабашный Иван\\ \\ (по материалам конспекта старшекурсников, \\ написанном на основе лекций В. А. Петрова,\\ а также других источников)}
 \date{22 января 2020 г.}
 
@@ -64,6 +64,7 @@
 \DeclareMathOperator{\codim}{codim}
 \DeclareMathOperator{\rank}{rank}
 \DeclareMathOperator{\ord}{ord}
+\DeclareMathOperator{\adj}{adj}
 
 \begin{document}
 
@@ -957,7 +958,7 @@
 \end{defn}
 
 \begin{theorem}
-    Пусть: $F$ - поле, $f\in F[x]$ - многочлен, $n:=deg f$, $F_n$ - поле разложения, $\varphi: F\rightarrow F_n, \psi : F\rightarrow K$ - какие-то вложения, в $K[x]$ $f$ раскладывается на линейные множители.\ 
+    \hypertarget{t6}{Пусть}: $F$ - поле, $f\in F[x]$ - многочлен, $n:=deg f$, $F_n$ - поле разложения, $\varphi: F\rightarrow F_n, \psi : F\rightarrow K$ - какие-то вложения, в $K[x]$ $f$ раскладывается на линейные множители.\ 
 
     Тогда существует (не обязательно единственное) вложение $\bar{\psi}:F_n\rightarrow K$ такое, что $\psi=\bar{\psi}\circ \varphi$. Вэтом смысле, $F_n$ - наименьшее поле, которое содержит все корни $f$.
 \end{theorem}
@@ -1295,7 +1296,7 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 \begin{proof}
     1 случай (конечный). Рассмотрим два конечный базиса $V$: $\{v_1, \dots, v_n\}$ и $\{u_1, \dots , u_m\}$. Представим $v_n$ в виде $v_n=\sum_{i=1}^mu_i\alpha_i, \alpha_i\in F$, причём не все $\alpha_i$ равны нулю, так как иначе $v_n=0$ - нетривиальная линейная зависимость первого набора. Не умаляя общности, пусть $\alpha_m\neq 0$. Тогда $v_n\alpha_m^{-1}=u_m+\sum_{i=1}^{m-1}u_i\alpha_i\alpha_m^{-1}$. Заменим в первом базиче $v_n$ на $v_n\alpha_m^{-1}$, и первый базис останется базисом (понятно, что они опять-таки всё порождают, поделим изначальный коэффициент того или иного разложения на $\alpha_m^{-1}$. аналогично, они линейно независимы, так как можно поделить последний коэффициент). Во втором базисе заменим $u_m$ на $u_m+\sum_{i=1}^{m-1}u_i\alpha_i\alpha_m^{-1}$, и второй базис также останется базисом, покажем это. \ 
 
-    Предположим, что полученный набор линейно зависим, то есть, $\sum_i=1^{m-1}u_i\beta_i+(u_m+\sum_{i=1}^{m-1})\beta_m=0$ - некоторая нетривиальная линейная зависимость нового набора. $\beta_m\neq 0$, так как иначе существовала бы нетривиальная зависимость набора $\{u_1, \dots, u_{m-1}\}$. Раскроем скобки, приведём подобные, получим некоторую линейную линейную зависимость изначального второго набора, причём нетривиальную, так как коэффициент при $u_m$ будет равен $\beta_m$, то есть, будет ненулевым. Противоречие с тем, что изначальный второй набор - базис. Значит, полученный набор линейно независим. Аналогично, полученный набор - система образующих, а значит, базис. Таким образом, мы получили два базиса, у которых хотя бы один элемент общий. Так будем преобразовывать бащисы, увеличивая количество общих элементов. В конце концов окажется, что один базис содержится в другом, а тогда они совпадают, так как базис - минимальная по включению система образующих. При этом на каждом шаге мы меняли только по вектору из каждого бащиса, а количество векторов в базичах не меняли. Значит, изначальные базисы равномощны.\ 
+    Предположим, что полученный набор линейно зависим, то есть, $\sum_{i=1}^{m-1}u_i\beta_i+(u_m+\sum_{i=1}^{m-1})\beta_m=0$ - некоторая нетривиальная линейная зависимость нового набора. $\beta_m\neq 0$, так как иначе существовала бы нетривиальная зависимость набора $\{u_1, \dots, u_{m-1}\}$. Раскроем скобки, приведём подобные, получим некоторую линейную линейную зависимость изначального второго набора, причём нетривиальную, так как коэффициент при $u_m$ будет равен $\beta_m$, то есть, будет ненулевым. Противоречие с тем, что изначальный второй набор - базис. Значит, полученный набор линейно независим. Аналогично, полученный набор - система образующих, а значит, базис. Таким образом, мы получили два базиса, у которых хотя бы один элемент общий. Так будем преобразовывать бащисы, увеличивая количество общих элементов. В конце концов окажется, что один базис содержится в другом, а тогда они совпадают, так как базис - минимальная по включению система образующих. При этом на каждом шаге мы меняли только по вектору из каждого бащиса, а количество векторов в базичах не меняли. Значит, изначальные базисы равномощны.\ 
 
     2 случай (бесконечный). Пусть $u=\{u_i\}_{i\in I}, v=\{v_j\}_{j\in J}$ - базисы, причём $\vert I\vert >\vert J\vert $ и $\vert I\vert$ бесконечна. Выразим элементы $u$ через $v:u_i=\sum_{j\in J_i}v_j\alpha_j, \vert J_i\vert<\infty$. Рассмотрим отображение из $I$ в множество конечных подмножеств $J$, которое мы обозначаим как $J'$, действующее по правилу $i\mapsto J_i$. Воспользуемся утверждением, доказанным в курсе теории множеств: если $J$ конечно, то $\vert J'\vert=2^{\vert J\vert}$, то есть, $J'$ конечно, иначе $\vert J'\vert=\vert J\vert$. С исходным неравенством это становится $\vert I\vert>\vert J'\vert$ (если $J$ конечно: то неравенство верно, так как $I$ бесконечно, а $J'$ конечно: иначе $\vert I\vert > \vert J\vert = \vert J'\vert$). \ 
 
@@ -1880,7 +1881,7 @@ $$
     
     Первый пункт доказан.\ 
 
-    Индукция по $n$. База: $\Phi_1=x-1$ - многочлен с содержанием 1. Переход: используя предположение индукции, разложим правую часть как $\Phi_n\cdot g$ для некоторого многочлена $g$ с целыми коэффициентами и содержанием 1. Мы в области целостности, поэтому можем сократить обе части на $g$. При этом справа останется то, что осталось бы при делении $x^n-1$ на $g$ с остатком в $\mathbb{Q}[x]$ (вспомним определение деления с остатком). А останется, конечно, многочлен с рациональными клэффициентами. С другой стороны, это $\Phi_n$. Поскольку содержание $x^n-1$ - единица и содержание мультипликативно, содержание $\Phi_n$ - тоже единица. Значит, его коэффициенты целые и взаимно просты в совокупности. Что и требовалось.
+    Индукция по $n$. База: $\Phi_1=x-1$ - многочлен с содержанием 1. Переход: используя предположение индукции, разложим правую часть как $\Phi_n\cdot g$ для некоторого многочлена $g$ с целыми коэффициентами и содержанием 1. Мы в области целостности, поэтому можем сократить обе части на $g$. При этом справа останется то, что осталось бы при делении $x^n-1$ на $g$ с остатком в $\mathbb{Q}[x]$ (вспомним определение деления с остатком). А останется, конечно, многочлен с рациональными клэффициентами. С другой стороны, это $\Phi_n$. Поскольку содержание $x^n-1$ - единица и содержание мультипликативно, содержание $\Phi_n$ - тоже единица. Значит, его коэффициенты целые и взаимно просты в совокупности. \hypertarget{t5}{Что и требовалось}.
 \end{proof}
 
 \begin{cons}
@@ -1893,15 +1894,437 @@ $$
 
 \subsection{Конечные поля (существование, единственность, цикличность мультипликативной группы)}
 
+Как нетрудно понять, речь в этом билете идёт о полях с конечным числом элементов. Для начала покажем такую теорму:
+
+\begin{theorem}
+    Пусть $A$ - конечная абелева группа. Пусть для всякого натурального $d$ существует не более $d$ элементов, которые в степени $d$ дают единицу. Тогда $A$ изоморфна циклической группе $C_n$ для некоторого $n$. 
+\end{theorem}
+
+\begin{proof}
+    Обозначим порядок группа $A$ за $n$. Пусть $d$ - натуральное число, а $a$ - элемент $A$ порядка $d$. $a$ порождает подгруппу из $d$ элементов, каждый из которых в степени $d$ даёт единицу. Но, по условию, таких элементов не больше, чем $d$ - мы их всех нащли. Как мы знаем, среди этих элементов $\varphi(d)$ первообразных, порядка $d$. Таким образом, для произвольного $d$ элементов порядка $d$ в $A$ либо нуль, либо $\varphi(d)$. Обозначим для всякого $d$ их множество за
+    \[
+        A_d:=\{a\in A\vert d=\text{Ord}a\}.
+    \]
+    По теореме Лагранжа, если $d$ не делит $n$, то $A_d=\emptyset$. Тогда
+    \[
+        A=\sqcup_d A_n=\sqcup_{d\vert n}A_d.
+    \]
+    Следовательно, 
+    \[
+        \vert A\vert =\sum_{d\vert n}\vert A_d\vert.
+    \]
+    С другой стороны, следствием из прошлого билета (\hyperlink{t5}{см.}) имеем 
+    \[
+        \vert A\vert =\sum_{d\vert n}\varphi(d).
+    \]
+    Вспомним теперь то, что доказывали в начале: для любого $d$, $\vert A_d\vert\leq \varphi(d)$. Судя по нашим двум суммам для $A$, эта оценка должно достигаться так же для любого $d$. Значит, 
+    \[
+        \forall d\vert n:\vert A_d\vert=\varphi(d).
+    \]
+    В частности, $\vert A_n\vert=\varphi(n)>0$: есть элемент порядка $n=\vert A\vert$. Он-то и порождает всю группу.
+\end{proof}
+
+\begin{cons}
+    Пусть $F$ - поле, $A$ - конечная подгруппа его мультипликативной группы. Тогда $A$ циклическая.
+\end{cons}
+
+\begin{proof}
+    Мы доказали, что над полем любой многочлен имеет корней не больше, чем его степень. Значит, над $F$ уравнение $x^d=1$ будет иметь корней не более $d$ решений для любого $d$. В частности, это так и для любого его подмножества, поэтому мы можем применить теорему выше к $A$.
+\end{proof}
+
+\begin{theorem}
+    Для любого простого $p$ и натурального $n$ существует поле из $p^n$ элементов и все такие поля изоморфны.
+\end{theorem}
+
+\begin{proof}
+    Для начала введём, так называемый, \textit{эндоморфизм Фробениуса}. Пусть $F$ - любое поле характеристики $p>0$. Рассмотрим отображение
+    \[
+        \varphi:F\rightarrow F, x\mapsto x^p.
+    \]
+    Очевидно, $\varphi(xy)=\varphi(x)\varphi(y)$. Кроме того, $\varphi(x+y)=\varphi(x)+\varphi(y)$, так как раскрыв по биному, во всех элементах суммы, кроме этих, будут коэффициенты, делящиеся на $p$. Таким образом, $\varphi$ - эндоморфизм (гомоморфизм в себя) поля $F$.  Так как $\Ker\varphi=0$, то $\Imf \varphi=F^p\simeq F$. Очевидно, что для конечного поля $F^p=F$, так что эндоморфизм в этом случае оказывается автоморфизмом.\ 
+    
+    Пусть теперь $F$ - конечное поле из $q=p^n$ элементов. Так как мультипликативная группа $F^\times$ имеет порядок $q-1$, то $a^{q-1}=1$ для любого $a\in F^\times$ и, значит, $a^q=a \forall a\in F$. Инече говоря, все элементы поля $F$ являются корнями многочлена $x^q-x$. Следовательно, $F$ - поле разложения этого многочлена над $\ZZ_p$. В силу \hyperlink{t6}{теоремы 14} это показывает, что все поля из $q$ элементов изоморфны.\ 
+
+    С другой стороны, пусть $F$ - поле разложения многочлена $f=x^q-x$ над $\ZZ_p$. Так как $f'=-1$, то многочлен $f$ не имеет кратных корней. Его корни - это неподвижные точки автоморфизма $\varphi^n$ поля $F$, где $\varphi$ - автоморфизм Фробениуса. Легко видеть, что неподвижные точки любого автоморфизма поля образуют подполе. Таким образом, совокупность корней многочлена $f$ есть подполе из $q$ элементов в $F$ (и, следовательно, совпадает с $F$). Тем самым доказано существование поля из $q$ элементов.
+\end{proof}
+
+\resetall
+
 \subsection{Фактор-группа, теорема о гомоморфизме}
+
+\begin{defn}
+    Пусть $C$ - подгруппа [абелевой] (в неабелевых группах осмысленно факторизовать по подгруппе можно не всегда) группы $A$. \hypertarget{n94}{\textcolor{red}{\textit{Фактор-группа}}} $A/C$ - фактор $A$ по отношению эквивалентности
+    \[
+        x\equiv_C y \Leftrightarrow x-y\in C
+    \] 
+    с определённой на нём операцией
+    \[
+        [x]_C+[y]_C:=[x+y]_C.
+    \]
+\end{defn}
+
+Гомоморфизм задаётся на группах ровно так же, как и обычные гомоморфизмы, о которых мф говорили раньше, да и теорема о гомоморфизме тоже формулируется так же (\hyperlink{n25}{см.}):
+
+\begin{theorem}
+    $A/\Ker \varphi \cong \Imf \varphi$, причём изоморфизм действует по правилу $[a]\mapsto \varphi(a)$.
+\end{theorem}
+
+\resetall
 
 \subsection{Определитель матрицы. Инвариантность при элементарных преобразованиях, разложение по строчке и столбцу}
 
+\begin{defn}
+    Отображение нескольких аргументов $f$ \hypertarget{n95}{\textcolor{red}{\textit{полилинейно}}}, если оно линейно по каждому из аргументов:
+    \[
+        f(x_1, \dots, \alpha x^k+\beta x_k', \dots, x_n)=f(x_1, \dots, \alpha x^k, \dots, x_n)+f(x_1, \dots, \beta x_k', \dots, x_n).
+    \]
+\end{defn}
+
+\begin{defn}
+    Отображение нескольких аргументов $f$ \hypertarget{n96}{\textcolor{red}{\textit{кососимметрично}}} (или знакопеременно, или антисимметрично), если при совпадении любых двух аргументов оно равно нулю.
+\end{defn}
+
+\begin{lemma}
+    Пусть полилинейное отображение $f(x, y)$ кососимметрично. Тогда для любых аргументов $f(x, y)=-f(y,x)$.
+\end{lemma}
+
+\begin{proof}
+    Зафиксируем $x$ и $y$, и выразим нуль:
+    \[
+        0=f(x+y, x+y) = \\
+        = f(x, x)+f(x, y)+f(y, x)+f(y, y) = \\
+        = f(x, y)+f(y, x)
+    \]
+\end{proof}
+
+Теперь будем доказывать корректность такого определения:
+
+\begin{defn}
+    \hypertarget{n97}{\textcolor{red}{\textit{Определитель}}} - функция $D:M_n(K)\rightarrow K$, которая полилинейна, знакопеременна по строчкам матрицы (докажем, что и по столбцам) и принимает значение 1 на единичной матрице (кстати, определитель есть гомоморфизм).
+\end{defn}
+
+\begin{theorem}
+    Определитель существует (1), инвариантен относительно домножения на трансвекции слева (2), а также единственен (3).
+\end{theorem}
+
+\begin{proof}
+    В предложении справедливости первого пункта мы можем сразу доказать второй. Обозначим определитель за $D$; тогда по определению выполняются два равенства ($u_i$ - строки):
+
+    \begin{equation*}
+        D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_i+\xi u_j \\
+            \vdots \\
+            u_n
+        \end{pmatrix}
+        =D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_i\\
+            \vdots \\
+            u_n
+        \end{pmatrix}
+        +\xi D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_j\\
+            \vdots\\
+            u_j\\
+            \vdots \\
+            u_n
+        \end{pmatrix}
+    \end{equation*}
+
+    В предположении пунктов 1 и 2 докажем единственность - пункт 3. Для начала приведём матрицу к эшелонированному виду - её определитель не изменился. Если в матрице есть нулевая строка, то её определитель равен нулю:
+
+    \begin{equation*}
+        D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_{n-1}\\
+            0
+        \end{pmatrix}
+        =D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_{n-1}\\
+            0+0
+        \end{pmatrix}
+        =
+        D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_{n-1}\\
+            0
+        \end{pmatrix}
+        +
+        D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_{n-1}\\
+            0
+        \end{pmatrix}
+        ,
+    \end{equation*}
+
+    откуда 
+
+    \begin{equation*}
+        D
+        \begin{pmatrix}
+            u_1\\
+            \vdots\\
+            u_{n-1}\\
+            0
+        \end{pmatrix}
+        =0.
+    \end{equation*}
+
+    Если в матрице нет нулевой строки, то её определитель считается с помощью свойства однородности:
+
+    \begin{equation*}
+        D
+        \begin{pmatrix}
+            1 &  &  &  \\
+              &  \ddots  &  &  \\
+              &  & 1 &  \\
+              &  &  &  d
+        \end{pmatrix}
+        =d\cdot D
+        \begin{pmatrix}
+            1 &  &  &  \\
+              &  \ddots  &  &  \\
+              &  & 1 &  \\
+              &  &  &  1
+        \end{pmatrix}
+        =d.
+    \end{equation*}
+
+    Значит, если определитель - верно заданная функция, он определён для матрицы единственным способом.\ 
+
+    Наконец, докажем существование определителя, приведя для него явную формуду. Утверждаем, что
+    \[
+        D(A)=\sum_{\sigma\in S_n} \text{sign}(\sigma)\cdot a_{1\sigma(1)}\cdot \dots\cdot a_{n\sigma(n)}
+    \]
+
+    \begin{remark}
+        Можно увидеть, что каждое слагаемое соответствует одной расстановке не бьющих друг друга ладей на шахматной доске $n\times n$. При этом, если просуммировать по всем ладьям числа ладей на северо-востоке от текущей, мы получим общее число инверсий в данной перестановке. Отсюда можно подсчитать знак.
+    \end{remark}
+
+    Нам осталось проверить, что определённый таким образом $D$ удовлетворяет трём основным свойствам определителя.\ 
+
+    Проверим, что определитель линеен по каждой строке. Пусть $k$-я строка матрицы-аргумента записывается а видел линейной комбинации $\alpha a_{k*}+\alpha'a_{k*}'$. Запишем определитель по формуле, затем разобьём его на две суммы и вынесем множители $\alpha$ и $\alpha'$:
+
+    \begin{align*}
+        D
+        \begin{pmatrix}
+            a_1\\
+            \vdots\\
+            \alpha a_{k*}+\alpha'a_{k*}'\\
+            \vdots \\
+            a_n
+        \end{pmatrix} 
+        & = \sum_{\sigma \in S_n} \text{sign}(\sigma) a_{1 \, \sigma(1)} \ldots (\alpha a_{k \, \sigma(k)} + \alpha' a'_{k \, \sigma(k)}) \ldots a_{n \, \sigma(n)} \\
+        & = \alpha \sum_{\sigma \in S_n} \text{sign}(\sigma) a_{1 \, \sigma(1)} \ldots a_{k \, \sigma(k)} \ldots a_{n \, \sigma(n)}                             \\
+        & + \alpha' \sum_{\sigma \in S_n} \text{sign}(\sigma) a_{1 \, \sigma(1)} \ldots a'_{k \, \sigma(k)} \ldots a_{n \, \sigma(n)}                           \\
+        & =
+       \alpha D
+        \begin{pmatrix}
+            a_1\\
+            \vdots\\
+            \alpha a_{k*}\\
+            \vdots \\
+            a_n
+        \end{pmatrix}
+        +\alpha' D
+        \begin{pmatrix}
+            a_1\\
+            \vdots\\
+            \alpha a_{k*}'\\
+            \vdots \\
+            a_n
+        \end{pmatrix}
+    \end{align*}
+
+    Покажем кососимметричность определителя. Предположим, в матрице-аргументе совпадают строки $k$ и $l$. Симметрическая группа $S_n$, по которой ведётся суммирование в формуле для определителя, разбивается в дизъюнктивное объединение смежных классов по знакопеременной группе $A_n$:
+    \[
+        S_n=A_n\sqcup (kl)A_n.
+    \]
+    Любая перестановка из $A_n$ имеет положительный знак; из $(kl)A_n$ - отрицательный. Осталось только заметить, что суммы по $A_n$ и $(kl)A_n$ равны, поскольку транспозиция $(kl)$ переставляет две равные строчки матрицы.\ 
+
+    Покажем, что $D(I)=1$. Это так, поскольку в сумме перестановок единственное ненулевое слагаемое - то, которое соответствует тождественной перестановке.
+
+\end{proof}
+
+Выделим также отдельно\\
+
+\begin{theorem}
+    (\hypertarget{n98}{\textcolor{red}{\textit{Формула Лейбница для определителя}}}). Пусть $A$ - матрица, $a_{ij}$ - её элемент в позиции $(i, j)$. Тогда 
+    \[
+        \det (A)=\sum_{\sigma\in S_n} \text{sign}(\sigma)\cdot a_{1\sigma(1)}\cdot \dots\cdot a_{n\sigma(n)}.
+    \]
+\end{theorem}
+
+\begin{defn}
+    Пусть $a$ - матрица. Тогда \hypertarget{n99}{\textcolor{red}{\textit{минор}}} матрицы $a$ порядка $k$ -  это определитель подматрицы $k\times k$, образованной пересечениями некоторых $k$ строк и $k$ столбцов.
+\end{defn}
+
+\begin{remark}
+    Обозначим за $M_{ij}(a)$ определитель матрицы, которая получается из матрицы $a$ удалением $i$-ой строчки и $j$-го столбца.
+\end{remark}
+
+\begin{theorem}
+    (\hypertarget{n100}{\textcolor{red}{\textit{Разложение определителя по строке}}}). Пусть $k$ - номер некоторой строки матрицы $a$. Тогда
+\end{theorem}
+
+\begin{proof}
+    Рассмотрим формулу Лейбница для определителя. Каждое слагаемое в ней соответствует одной правильной расстановке ладей по доске $n\times n$. Ясно, что в каждой точке правильной расстановке ровно одна ладья стоит в ряду $k$. Сгруппироуем слагаемые в зависимости от того, на какую позицию мы поставили ладью в ряду $k$. Любая правильная расстановка на доске $n\times n$ с ладьёй на позиции $(k, i)$ получается из правильной расстановки остальных ладей на доске $(n-1)\times(n-1)$. Таким образом, доказываемая формула совпадает с формулой Лейбница с точностью до знаков слагаемых. Покажем, что знаки тоже совпадают.\ 
+
+    Зафиксируме некоторую расстановку $\sigma$ на доске $n\times n$. Чтобы получить число инверсий в расстановке $\sigma$, нам необходимо сложить число инверсий в расстановке-прообразе $\sigma '$ на доске $(n-1)\times (n-1)$ с числом инверсий, в которых участвует добавляемая ладья на позиции $(k, i)$. Разобьём матрицу на квадратны относительно этой ладьи. Обозначим за $x$ число ладей на юго-западе относительно неё. Тогда на северо-западе - $(i-1-x)$, а на востоке - $(k-1-(i-1-x))$ ладей.\ 
+
+    В частности, в первом и третьем квадрантах 
+    \[
+        x+k-1-(i-1-x)=2x+k-i
+    \]
+    ладей. Это и есть количество инверсий с ладьёй $(k,l)$. Тогда 
+    \[
+        (-1)^{\text{Inv}\sigma}=(-1)^{2x+k-i}\cdot(-1)^{\text{Inv}\sigma'}=(-1)^{k-i}\cdot(-1)^{\text{Inv}\sigma'}
+    \]
+    Таким образом, знаки в доказываемой формуле записаны корректно.
+\end{proof}
+
+\begin{remark}
+    Аналогично можно считать и разложение по столбцу.
+\end{remark}
+
+\resetall
+
 \subsection{Присоединенная матрица. Формула Крамера. Определитель транспонированной матрицы}
+
+\begin{defn}
+    Пусть $a$ - матрица. \hypertarget{n101}{\textcolor{red}{\textit{Присоединённая}}} (или взаимная) к $a$ матрица - матрица $\adj a$, которая состоит из элементов вида 
+    \[
+        (\adj a)_{ij}:=(-1)^{i+j}\cdot M_{ij}(a).
+    \]
+\end{defn}
+
+\begin{theorem}
+    (\hypertarget{n102}{\textcolor{red}{\textit{Формулы Крамера}}}). Пусть $a$ - матрица. Тогда 
+    \[
+        (\adj a)\cdot a=I\cdot \det a=a\cdot (\adj a).
+    \]
+\end{theorem}
+
+\begin{proof}
+    Рассмотрим коэффициенты следующего матричного произведения: 
+    \[
+        (a\cdot \adj(a))_{ij}=\sum_k a_{ik}\cdot (\adj (a))_{kj}=\sum_k a_{ik}\cdot (-1)^{k+j}M_{jk}(a).
+    \]
+    Если $j=i$, то сумма принимает вид
+    \[
+        (a\cdot\adj(a))_{ii}=\sum_k a_{ik}\cdot(-1)^{k+i}M_{ik}(a).
+    \]
+    Это разложение определителя $\det a$ по $i$-ой строке. Значит, диагональ матрицы $a \adj a$ занята скалярами $\det a$.\ 
+
+    Пусть теперь $i\neq j$. Пусть $a'$ - это матрица $a$, у которой $j$-ю строчку заменили на $i$-ую. Для любого $k$, новый и старый миноры совпадают: $M_{jk}(a)=M_{jk}(a')$, поскольку они не зависят от изменившейся $j$-ой строки. Аналогично, $i$-ая строка $a'$ не отличается от соответствующей строки $a$, поэтому для всякого $k$ выполнено $a_{ik}=a_{ik}'$.\ 
+
+    В итоге, $(a\adj a)_{ij}=\det a'$. Но последний определитель равен нулю, поскольку у матрицы $a'$ совпадают строки $i$ и $j$. Значит, $(a\cdot \adj a)_{ij}=0$.\ 
+
+    Таким образом, матрица $a\adj a$ - скалярная с числом $\det a$ на диагонали. Разложим по столбцу вместо строки, получим аналогичное равенство для сопряжённого произведения: $(\adj a)\cdot a=I\cdot \det a$. Что и требовалось.
+\end{proof}
+
+\begin{defn}
+    Пусть $a=(a_{ij})$ - матрица. \hypertarget{n103}{\textcolor{red}{\textit{Транспонированная}}} к матрице $a$ матрица $a^T$ - это матрица, в которой элемент в позиции $(i,j)$ равен элементу исходной матрицы $a$ в позиции $(i, j)$: $a_{ij}^T=a_{ji}$.
+\end{defn}
+
+Следующие два абзаца не обязательны в билете.\\
+
+\begin{lemma}
+    Пусть $R$ - коммутативное кольцо. Тогда $(ab)^T=b^ta^t$.
+\end{lemma}
+
+\begin{defn}
+    Матрица $(a^T)^{-1}$ называется \textit{контрградиентной} к $a$.
+\end{defn}
+
+\begin{lemma}
+    Пусть $a$ - матрица $n\times n$. Тогда $\det (a^T)=\det (a)$. 
+\end{lemma}
+
+\begin{proof}
+    Рассмотрим формулы каждого из определителей:
+    \[
+        \det (a)=\sum_{\sigma} \text{sign}(\sigma)\cdot a_{1\sigma(1)}\cdot \dots\cdot a_{n\sigma(n)}, \text{     }
+        \det (a^T)=\sum_{\pi} \text{sign}(\pi)\cdot a_{\pi(1 1)}\cdot \dots\cdot a_{\pi(n) n}.
+    \]
+    Перепишем вторую из них в виде
+    \[
+        \det (a)=\sum_{\pi} \text{sign}(\pi)\cdot a_{1\pi^{-1}(1)}\cdot \dots\cdot a_{n\pi^{-1}n)}.
+    \]
+\end{proof}
+
+\resetall
 
 \subsection{Вычисление определителя методом Гаусса}
 
+По поводу нахождения определителя методом Гаусса. Сам метод Гаусса и то, как он работает, мы обсуждали ещё давным-давно в 23 билете, поэтому алгоритм работы \hyperlink{n60}{см. здесь}. Там мы обговаривали, что либо получается нулевая строчка, тогда определитель есть нуль, либо он есть значение в последней диагональной ячейке после приведения всех остальных к единицам.
+
+\resetall
+
 \subsection{Принцип продолжения алгебраических тождеств. Определитель произведения матриц}
+
+Сейчас мы будем поинмать, что происходит, когда мы хотим, чтобы в матрице коэффициенты были в некотором кольце с 1 $R$, а не поле.\\
+
+\begin{theorem}
+    (\hypertarget{n104}{\textcolor{red}{\textit{Принцип продолжения алгебраических тождеств}}}). Пусть $R$ - бесконечная область целостности, а $f$ - многочлен с коэффициентами из $R$ от переменных $x_1, \dots, x_N$. Предположим, $f$ зануляется при подстановке любых значений переменных. Тогда каждый коэффициент $f$ равен нулю.
+\end{theorem}
+
+\begin{proof}
+    Разложим $f$ в сумма по степеням $t_N$:
+    \[
+        f=a_0(x_1, \dots, x_{N-1})+a_1(x_1, \dots, x_{N-1})\cdot x_n+\dots
+    \]
+    Подставим произвольные значения на места первых $N-1$ переменных и рассмотрим $f$ как многочлен от единственной переменной $x_n$. Он зануляется во всех точках $R$. У ненулевого многочлена над областью целостности корней не может быть больше, чем его степень, а степень многочлена конечна. Значит, для всяких значений первых $N-1$ переменных и всякого коэффициента $i$, $a_i(x_1, \dots,x_{N-1})=0$. По предположению индукции все коэффициенты многочленов $\{a_i\}$ равны нулю. Значит, и все коэффициенты нашего многочлена равны нулю (наверное, подразумевается спуск по количеству переменных).
+\end{proof}
+
+\begin{theorem}
+    Пусть $A$ и $B$ - квадратные матрицы. Тогда $\det (AB)=\det(A)\det(B)$. В частности, определитель $\det: \text{GL}_n(K)\rightarrow K^\times$ - гомоморфизм групп.
+\end{theorem}
+
+\begin{proof}
+    С помощью метода Гаусса сатрица $A$ раскладывается в произведение некоторго произведения трансвекций $T_A$ и диагональной матрицы $A'$: $A'=T_A^{-1}A$. Домножение на трансвекци/ слева по определению не меняет определителя. Значит, $\det A=\det(T_A A')=\det A'$. Поступим аналогично для $B$, воспользовавшись тем, что домножение справа на трансвекцию тоже не меняет определителя. Поэтому, $B=B'T_b$ для некоторой диагональной $B'$ и произведения трансвекций $T_B$. Итого исходное равенство эквивалентно равенству для диагональных матриц: $\det(A'B')=\det A'\det B'$. Легко понять, что оно выполняется.
+\end{proof}
+
+Можно рассказать ещё такое дополнение:\\
+
+\begin{theorem}
+    Пусть $R$ - коммутативное кольцо с единицей. Тогда для любых матриц $a$ и $b$ с коэффициентами из $R$ выполняются:\ 
+
+    \begin{itemize}
+        \item $(\det a)(\det b)=\det (ab)$;
+        \item $a(\adj a)=(\adj a)a=I\cdot \det a$.
+    \end{itemize}
+\end{theorem}
+
+\begin{proof}
+    Докажем мультипликативность определителя. Рассмотрим выражение
+    \[
+        f:=(\det a)(\det b)-\det (ab).
+    \]
+    Это многочлен с целыми коэффициентами от элементов матриц $a$ и $b$. Целые числа вкладываются в рациональные, а для полей мы уже проверили мультипликативность определителя. Значит, многочлен $f$ зануляется во всех точках целочисленной решётки. По принципу продолжения алгебраических тождеств, всякий коэффициент многочлена $f$ равен нулю. Тогда многочлен $f$ зануляется уже для любых значений матричных элементов из $R$. \ 
+
+    По аналогичным соображениям верно и второе равенство.
+\end{proof}
+
+\resetall
 
 
 
@@ -1972,6 +2395,8 @@ $$
 
     \hyperlink{n51}{коразмерность}\
 
+    \hyperlink{n96}{кососимметричное отображение}\
+
     \hyperlink{n15}{КТО}\
 
     \hyperlink{n31}{лемма Гаусса}\
@@ -1983,6 +2408,8 @@ $$
     \hyperlink{n55}{матрица перехода}\
 
     \hyperlink{n60}{метод Гаусса}\
+
+    \hyperlink{n99}{минор}\
 
     \hyperlink{n27}{многочлен}\
 
@@ -2001,6 +2428,8 @@ $$
     \hyperlink{n21}{образ}\
 
     \hyperlink{n10}{ОГИ}\
+
+    \hyperlink{n95}{определитель}\
 
     \hyperlink{n13}{ОТАр}\
 
@@ -2024,15 +2453,23 @@ $$
 
     \hyperlink{n18}{поле частных}\
 
+    \hyperlink{n95}{полилинейное отображение}\
+
     \hyperlink{n56}{полный ранг}\
 
     \hyperlink{n71}{порождающий элемент}\
 
     \hyperlink{n69}{порядок элемента}\
 
+    \hyperlink{n104}{принцип продолжения а. т.}\
+
+    \hyperlink{n101}{присоединённая матрица}\
+
     \hyperlink{n8}{простые}\ 
 
     \hyperlink{n58}{псевдоотражение}\
+
+    \hyperlink{n100}{разложение определителя}\
 
     \hyperlink{n41}{разложение рациональных ф-й}\
 
@@ -2076,6 +2513,8 @@ $$
 
     \hyperlink{n74}{транспозиция}\
 
+    \hyperlink{n103}{транспонированная матрица}\
+
     \hyperlink{n33}{универсальное св-во кольца мн-ч}\
 
     \hyperlink{n26}{универсальное св-во фактор-кольца}\
@@ -2086,7 +2525,13 @@ $$
 
     \hyperlink{n12}{факториальность}\
 
+    \hyperlink{n94}{фактор-группа}\
+
     \hyperlink{n24}{фактор-кольцо}\
+
+    \hyperlink{n102}{формула Крамера}\
+
+    \hyperlink{n98}{формула Лейбница}\
 
     \hyperlink{n75}{фундаментальная транспозиция}\
 
