--- a/lekcii/algebra_2.tex
+++ b/lekcii/algebra_2.tex
@@ -253,6 +253,93 @@ $g(A)v=0$, но тогда
 \]
 причём мы можем даже потребовать, чтобы $f_1\vert f_2\vert\ldots\vert f_n$. \ 
 
-Умножение на $t$ будет действовать поккординатно.
+Умножение на $t$ будет действовать поккординатно. \ 
+
+Для каждого слагаемого мы умеем выписывать матрицу оператора $A$ в подходящем базисе. Матрица $A$ тогда выглядит на всём пространстве как цепочка фробениусовых клеток, расставленных по порядку по диагонали.\ 
+
+Зададимся теперь вопросом: чему же в таком случае равен минимальный многочлен? Ответ таков:
+\[
+    A=f_m(t),
+\]
+причём принципиально условие цепочки делений. \
+
+Как считать инвариантные факторы (то есть, $f_1(t), \ldots,f_n(t)$)? Рассмотрим $V$ и $F[t]$. $e_1, \ldots, e_n$ - базис $V$ как векторное пространство над $F$, а тем более, это система образующих $V$ как $F[t]$-модуля. Какими соотношениями обладает этот набор? $t\cdot e_i=Ae_i$ - линейная комбинация $e_1, \ldots, e_n$. Это соотношение между $e_i$ с коэффициентами из $f(t)$, получаем $(t\cdot I-A)e_i=0$.\ 
+
+Мы имеем $n$ образующих и $n$ таких последних соотношений. Рассмотрим матрицу $(t\cdot I-A)$, она имеет размер $n\times n$ над $F[t]$ и выглядит так:
+
+\begin{equation*}
+    \begin{pmatrix}
+        t-a_{11} & -a_{12} & \dots & -a_{1n}\\
+        -a_{21} & t-a_{22} & \dots & -a_{2n}\\
+        \vdots & \vdots &\ddots   & \vdots  \\
+        -a_{n1} & -a_{n2} & \dots & -a_{nn}
+    \end{pmatrix}
+\end{equation*}
+
+Домножим её слева и справа на обратимые над $F[t]$ матрица и приведём её к диагональному виду, а на диагонали будут расставлены $f_1, \ldots, f_m$ (перед которыми $n-m$ единиц). Последний многочлен будет минимальным многочленом $A$. \ 
+
+Сравним определители этих матриц. Определитель обратимой матрицы лежит в $F[t]^*=F^*$. Идеал, порождённый в $F[t]$ определителем, не поменяется, тогда 
+
+\[
+    (\det (t\cdot I-A))=(f_1(t)\ldots f_n(t)), 
+\]
+тогда $\det (t\cdot I-A))\in F[t]$ мы будем называть \textit{характеристическим многочленом} матрицы $A$ (обозначаем $\chi_A(t)$). Имеет он степень $n$, причём он ещё и унитарный в силу того, что максимальная степень будет содержаться в $(t-a_{11})(t-a_{22})\ldots(t-a_{nn})$.\ 
+
+Причём тогда мы можем получить такое равенство из того, что и характеристический многочлен, и призведение $f_i$ унитарно: 
+
+\[
+    \chi_a(t)=f_1(t)\cdot\ldots\cdot f_n(t),
+\]
+
+откуда минимальный многочлен делит характеристический многочлен, а характеристический делит минимальный в степени $n$. \ 
+
+Наборы неприводимых делителей у минимаьлного и характеристического многочленов совпадают. В частности, наборы корней без учёта кратности совпадают.\\
+
+\begin{theorem}
+    (Теорема Гамильтона-Кэли). Минимальный многочлен делит характеристичесий, имеет такие же корни [и у них совпадают неприводимые делители].
+\end{theorem}\
+
+Приступим теперь к рассмотрению \textit{нильпотентным} операторам.
+
+\begin{defn}
+    $A:V\rightarrow V$ - \textit{нильпотентный}, если $A^k=0$ для некоторого $k$.
+\end{defn}
+
+Нужно теперь научиться понимать, когда это выполнено. Берём $k:A^k=0, A^{k-1}\neq 0$ (наименьшее возможное?). Минимальный многочлен у $A$ - $t^k$, потому что он подходит, и никакой его делитель не подходит. Какой же характеристический многочлен у $A$? Это есть $t^n$, где $n=\dim V$ из теоремы Гамильтона-Кэли. \ 
+
+Пусть $A^k=0$ - минимальная такая степень. Рассмотрим $V$ как $F[t]$-модуль.
+\[
+F[t]/(t^{k_1})\oplus F[t]/(t^{k_2})\oplus\ldots\oplus F[t]/(t^{k_m}), \: k_1\leq k_2\leq\ldots\leq k_m=k,
+\]
+а само $k$ мы называем \textit{степенью нильпотентности}. Кстати, фробениусова клетка нильпотентного оператора теперь выглядит ещё лучше, весь правый столбец теперь состоит из нулей (в подходящем базисе). В общем случае, она составлена из квадратиков такого вида. Получили мы матрицу строгонижнетреугольного вида.
+
+\begin{defn}
+    \textit{Нижнетреугольная матрица} - всё, выше главной диагонали - нули. \textit{Строгонижнетреугольная матрица} - ещё и диагональ - нули.
+\end{defn}
+
+Как найти такой базис (без формы Смита)? Запишем по индукции:
+
+\begin{align*}
+    V[t] & =\{v\in V \vert tv=0\}=\Ker (A),  \\ 
+    V[t^2] & =\{v\in V \vert t^2v=0\}=\Ker (A^2),\\
+    &\dots \\
+    V[t^{k-1}] & =\Ker (A^{k-1}),\\
+    V[t^k] & =\Ker (A^k) = V.
+\end{align*}
+
+Рассмотрим цепочку вложенных пространств:
+\[
+    0<\Ker(A)\leq \Ker(A^2)\leq\ldots\leq\Ker(A^{k-1})<V.
+\]
+
+Посмотрим на образ $A$ (то есть, $\Imf A$), он попадёт в $\Ker (A^{k-1})$, а вот $A(\Ker(A^{k-2}))\leq\Ker(A^{k-2})$. \ 
+
+Осталось найти тот самый базис, в котором матрица $A$ имеет нужный вид. Рассмотрим фактор-пространство $V/\Ker(A^{k-1})$, и выберем в нём базис. Это даёт нам относительный базис $V$ относительно $\Ker (A^{k-1})$ (скажем, это $e_1, \ldots, e_s$). Тогда что с ними происходит: $e_1. Ae_1, \ldots, A^{k-1}e_1$, причём получается, что все они не равны нулю, так как они не лежат в классе нуля. \ 
+
+Рассмотрим $\langle e_1. Ae_1, \ldots, A^{k-1}e_1\rangle$ - $A$ переводит его в себя. Рассмотрим матрицу $A$ в данном базисе, это как раз будет фробениусова клетка размера $k$. Так проделаем для каждого элемента базиса и получим $s$ фробениусовых клеток размера $k$, где $s$ также было размерностью отфакторизованного пространства, тогда $s=\dim V-\dim \Ker (A^{k-1})$. \ 
+
+Теперь рассмотрим $\Ker(A^{k-1})/(\Ker A^{k-2}+\Imf A)$ -  подпространство, порождённое $\Ker A^{k-2}$ и $\Imf A$. Возьмём относительный базис $e_{1, 1}, \ldots, e_{s_1, 1}$, опять перейдём к $\langle e_{1, 1}. Ae_{1, 1}, \ldots, A^{k-1}e_{1, 1}\rangle$ - тут $A$ имеет матрицу в виде фробениусовой клетки размера $k-1$ (если фробениусовых клеток такого размера нет, это пространство равно нулю). $s_1$ - количество таких клеток. \ 
+
+И, наконец, клетки размера $k-i$: $\Ker(A^{k-i})/(\Ker(A^{k-i-1})+\Imf A^i)$, рассмотрим тут базис и проделаем аналогичные операции.
 
 \end{document}
